...
          <Controller
            name="name"
            control={control}
            rules={{ required: true }}
            render={({ field: { onChange, onBlur, value }, fieldState }) => (
              <Input
                testID="profile-name"
                title={t("createProfile.dogName")}
                placeholder={t("createProfile.howToCallDog")}
                value={value}
                onChangeText={onChange}
                onBlur={onBlur}
                maxLength={50}
...
          />
        </Container>
        <BottomAction.Container>
          <Button
            loading={dogCreateMutation.isPending}
            onPress={() => saveUser()}
            testID="profile-submit"
          >
            {t("createProfile.createProfile")}
          </Button>
        </BottomAction.Container>
      </View>
    </KeyboardAvoidingView>
...
