...
          <Text fontSize="xs" fontWeight="medium">
            {t("askForLocation.locationUsage")}
          </Text>
        </View>

        <Button
          testID="location-allow"
          loading={loading}
          onPress={async () => {
            try {
              setLoading(true);
              await updateUserLocation();
              router.push("/swipe");
...
