...
              <Controller
                name="birthDate"
                control={control}
                rules={{ required: true }}
                render={({ field: { onChange, onBlur, value, name }, fieldState }) => (
                  <Input
                    testID="complete-profile-birth-date"
                    title={t("completeProfile.birthDate")}
                    placeholder="DD/MM/YYYY"
                    value={value ?? ""}
                    onBlur={onBlur}
                    optional
                    onChangeText={(value: string) => {
...
