...
              onChangeText={setKeyboardInput}
            />
          </View>
        </View>

        <ResendCode
          testID="otp-resend"
          onPress={() => {
            handleResendCode();
          }}
          style={styles.resendCode}
        >
          <Underline>
...
